nodemysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodemysql-service
spec:
  selector:
    app: nodemysql
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
