ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  labels:
    app: "frontend-app"
  name: "frontend-app"
  namespace: "default"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "ashwathabharat.com"
    http:  # Fixed indentation and removed extra "-"
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: "frontend-app-service"
            port:
              number: 5000
      - path: /api/
        pathType: "Prefix"
        backend:
          service:
            name: "backend-service"
            port:
              number: 3001
